# Dengue-ICU-Pediatric-Analysis

./: .gitignore  DASHBOARD_FAQ.md  README.md  pyproject.toml
.agents/data-science-expert/: SKILL.md
Power_BI/: Dengue_Dashboard.pbix
config/: pipeline_config.yaml
data/processed/: dengue_uci_cleaned.csv  predictions_test_set.csv  shap_feature_importance.csv  shap_patient_values.csv
data/raw/: Base_de_Datos_Dengue_UCIP.csv
notebooks/: 01_dengue_uci_eda_modeling.ipynb
