[project]
name = "dengue-uci-pediatrico"
version = "0.1.0"
description = "Análisis predictivo de Dengue en UCI Pediátrica - Hospital Cartagena"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "seaborn>=0.13",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "shap>=0.45",
    "pandera>=0.20",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29",
    "black>=24.0",
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"